--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <div class="input-block">
         <div class="age">
           <label for="day">Day</label>
-          <input type="month" name="day" id="day" placeholder="DD">
+          <input type="number" name="day" id="day" placeholder="DD">
           <p></p>
         </div>
         
         <div class="age">
           <label for="month">Month</label>
-          <input type="month" name="month" id="month" placeholder="MM">
+          <input type="number" name="month" id="month" placeholder="MM">
           <p></p>
         </div>
         
         <div class="age">
           <label for="year">Year</label>
-          <input type="month"  name="year" id="year" placeholder="YYYY">
+          <input type="number"  name="year" id="year" placeholder="YYYY">
           <p></p>
         </div>
       </div>
